<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/newconsultMedic"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.dani.medicbook.NewConsultMedicActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="154dp"
        android:layout_alignParentTop="true"
        android:text="@string/visitdate"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectmedcentre"
        android:id="@+id/button"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="141dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/button2"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/button"
        android:editable="false"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText14"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText"
        android:layout_alignEnd="@+id/editText" />
</RelativeLayout>
