<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.dani.medicbook.NewConsultPatientActivity">

    <RelativeLayout
        tools:context="com.android.dani.medicbook.NewConsultMedicActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/relativeLayout"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectmedcentre"
            android:id="@+id/button"
            android:layout_marginTop="44dp"
            android:layout_below="@+id/editText15"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:id="@+id/button2"
            android:layout_marginTop="47dp"
            android:layout_below="@+id/spinner2"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText14"
            android:layout_marginTop="154dp"
            android:layout_alignParentTop="true"
            android:text="@string/visitdate"
            android:layout_alignStart="@+id/editText15"
            android:layout_alignEnd="@+id/editText15" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText15"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/editText14"
            android:layout_alignEnd="@+id/button"
            android:layout_alignStart="@+id/button"
            android:editable="false"
            android:enabled="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:layout_row="0"
            android:layout_column="0"
            android:spinnerMode="dropdown"
            android:layout_span="2"
            android:layout_below="@+id/button"
            android:layout_marginTop="61dp"
            android:layout_alignEnd="@+id/button"
            android:layout_alignStart="@+id/button" />
    </RelativeLayout>
</RelativeLayout>
